gccida/c1/init_cumulative_args
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/init_cumulative_args/src/i386.c:2014:12: error: expected expression
*( _OWORD *)&cum->sse_words = 0LL; 
           ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/init_cumulative_args/src/i386.c:2014:4: error: use of undeclared identifier '_OWORD'
*( _OWORD *)&cum->sse_words = 0LL; 
   ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/init_cumulative_args/src/i386.c:2015:12: error: expected expression
*( _OWORD *)&cum->words = 0LL; 
           ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/init_cumulative_args/src/i386.c:2015:4: error: use of undeclared identifier '_OWORD'
*( _OWORD *)&cum->words = 0LL; 
   ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/init_cumulative_args/src/i386.c:2042:12: error: invalid operands to binary expression ('struct rtx_def' and 'tree [51]')
if ( v8[2] != *( &global_trees + 27) ) 
     ~~~~~ ^  ~~~~~~~~~~~~~~~~~~~~~~
5 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/init_cumulative_args/src/obj/i386.o] Error 1
